@@ -1,5 +1,6 @@
 - Bail out if 'mbstring.func_overload' is set.  We need the standard string
   functions to behave as originally defined.
+- Tweak web-file-browser.php example to work in an existing web server setup.
 
 ---------------------------------------------
 1.1.1 (2013-08-21)
